@@ -5,6 +5,12 @@ plugins {
     id("org.jetbrains.compose")
 }
 
+repositories {
+    google()
+    mavenCentral()
+    maven { url = uri("https://jogamp.org/deployment/maven") }
+}
+
 kotlin {
     jvm()
     sourceSets {
@@ -12,9 +18,12 @@ kotlin {
             dependencies {
                 implementation(compose.desktop.currentOs)
                 implementation(project(":shared"))
+                implementation("dev.datlag:kcef:2023.10.13")
                 implementation("com.arkivanov.decompose:decompose:2.1.0-compose-experimental")
                 implementation("io.github.xxfast:decompose-router:0.5.1")
                 implementation("com.arkivanov.decompose:extensions-compose-jetbrains:2.1.0-compose-experimental")
+                implementation("org.jogamp.gluegen:gluegen-rt-main:2.5.0")
+                implementation("org.jogamp.jogl:jogl-all-main:2.5.0")
             }
         }
     }
@@ -29,9 +38,26 @@ compose.desktop {
             packageName = "KotlinMultiplatformComposeDesktopApplication"
             packageVersion = "1.0.0"
         }
+        buildTypes.release.proguard {
+            configurationFiles.from("compose-desktop.pro")
+        }
     }
 }
 
 task("testClasses").doLast {
     println("This is a dummy testClasses task")
+}
+
+
+afterEvaluate {
+    tasks.withType<JavaExec> {
+        jvmArgs("--add-opens", "java.desktop/sun.awt=ALL-UNNAMED")
+        jvmArgs("--add-opens", "java.desktop/java.awt.peer=ALL-UNNAMED")
+
+        if (System.getProperty("os.name").contains("Mac")) {
+            jvmArgs("--add-opens", "java.desktop/sun.awt=ALL-UNNAMED")
+            jvmArgs("--add-opens", "java.desktop/sun.lwawt=ALL-UNNAMED")
+            jvmArgs("--add-opens", "java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
+        }
+    }
 }
